update order-service and inventory-service