@@ -1,7 +1,9 @@
 package com.ecommerce.orderservice.service;
 
+import com.ecommerce.orderservice.dto.InventoryResponse;
 import com.ecommerce.orderservice.dto.OrderLineItemsDto;
 import com.ecommerce.orderservice.dto.OrderRequest;
+import com.ecommerce.orderservice.external.inventoryService.InventoryServiceApi;
 import com.ecommerce.orderservice.model.Order;
 import com.ecommerce.orderservice.model.OrderLineItems;
 import com.ecommerce.orderservice.repository.OrderRepository;
@@ -9,9 +11,10 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,6 +22,7 @@ import java.util.stream.Collectors;
 public class OrderService {
 
     private final OrderRepository orderRepository;
+    private final InventoryServiceApi inventoryServiceApi;
 
     public void placeOrder(OrderRequest orderRequest) {
         Order order = new Order();
@@ -26,10 +30,25 @@ public class OrderService {
 
         List<OrderLineItems> orderLineItems = orderRequest.getOrderLineItemsDtoList().stream()
                 .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
 
         order.setOrderLineItemsList(orderLineItems);
-        orderRepository.save(order);
+        List<String> skuCodeList = orderLineItems.stream()
+                .map(OrderLineItems::getSkuCode)
+                .toList();
+
+        Map<String, List<String>> queryParam = new HashMap<>();
+        queryParam.put("skuCodeList", skuCodeList);
+        List<InventoryResponse> inventoryResponseList = inventoryServiceApi.getInventoryList(queryParam);
+
+        boolean allProductsInStock = inventoryResponseList.stream()
+                .allMatch(InventoryResponse::isInStock);
+
+        if (allProductsInStock) {
+            orderRepository.save(order);
+        } else {
+            throw new IllegalArgumentException("Product is not in stock, please try again later");
+        }
     }
 
     private OrderLineItems mapToDto(OrderLineItemsDto orderLineItemsDto) {
